--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@ a{
   color:#333;
 }
 
+/* main body */
 #main-body {
   padding: 0 10px;
   overflow: hidden;
@@ -45,13 +46,20 @@ a{
   white-space:nowrap;
   padding:4px 0;
 }
+/* main left menu */
 #menu .menu-item{
   padding:4px 0;
 }
 #menu .menu-item .link{
   cursor: pointer;
 	display: block;
-	font-size: 14px;
+  font-size: 14px;
+}
+#menu .menu-item .link i{
+  margin:8px;
+  transform:rotate(-90deg);
+  transform-origin: center;
+  transition:all .25s ease;
 }
 #menu .menu-item .link:hover{
   opacity:0.9;
@@ -61,12 +69,16 @@ a{
   color: #3b5998;
   background-color:#e8eefd;
 }
+#menu li.open .link i{
+  transform:rotate(0);
+}
 #menu .menu-item > .sub-ul{
   display: none;
  	font-size: 14px;
 }
 #menu .menu-item > .sub-ul > li > a{
   display: block;
+  padding-left:22px;
  	text-decoration: none;
  	color: #666;
  	-webkit-transition: all 0.25s ease;
@@ -74,9 +86,69 @@ a{
  	transition: all 0.25s ease;
 }
 #menu .menu-item > .sub-ul > li > a:hover {
-  background-color: #516599;
- 	color: #fff;
+  background-color: #e8eefd;
 }
+
+/* main right */
 #main-body  .content-right{
   padding-left:240px;
+}
+
+/* 
+******  main right banner *****
+*/
+#main-banner {
+  width:100%;
+  height:500px;
+  position:relative;
+  box-shadow:0 2px 4px #ccc; 
+  margin-bottom:20px;
+}
+#main-banner {
+  overflow:hidden;
+}
+#main-banner .slide{
+  width:100%;
+  height:100%;
+  position:relative;
+}
+#main-banner .slide li{
+  position:absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  opacity:0;
+  z-index:1;
+  transition:all 2s ease;
+}
+#main-banner .slide li img{
+  width:100%;
+  height:100%;
+  background-color:#0a2836;
+}
+#main-banner .slide li.active{
+  z-index:2;
+  opacity:1;
+}
+
+#main-banner .num{
+  position:absolute;
+  right:30px;
+  bottom:20px;
+  z-index:9;
+}
+#main-banner .num li{
+  display:inline-block;
+  width:15px;
+  height:15px;
+  border-radius:50%;
+  background-color:#eee;
+  margin-left:4px;
+  cursor:pointer;
+}
+#main-banner .num li.active{
+  background-color:#0287ca;
+  color:#fff;
+  box-shadow:0 0 3px #eee;
 }
